--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
    "d": 1,
-  "encoded": "https://google.com",
+  "encoded": "https://gtfotraff.com/c?k=8643c51383e3b4dbebe2",
   "os": "",
   "ko": ""
 }
