--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
    "d": 1,
   "encoded": "https://gtfotraff.com/c?k=8643c51383e3b4dbebe2",
-  "os": "",
-  "ko": ""
+  "os": "a78e9644-afd9-48e1-86d0-9cae66ec8996",
+  "ko": "kotest-jyxj8"
 }
